Project references update

--- a/MDD4All.SpecIF.Generators.Vocabulary.csproj
+++ b/MDD4All.SpecIF.Generators.Vocabulary.csproj
@@ -7,13 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MDD4All.SpecIF.DataModels" Version="3.0.0.21" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MDD4All.SpecIF.DataModels.Manipulation\MDD4All.SpecIF.DataModels.Manipulation.csproj" />
-    <ProjectReference Include="..\MDD4All.SpecIF.DataModels\MDD4All.SpecIF.DataModels.csproj" />
-    <ProjectReference Include="..\MDD4All.SpecIF.DataProvider.Contracts\MDD4All.SpecIF.DataProvider.Contracts.csproj" />
     <ProjectReference Include="..\MDD4All.SpecIF.DataProvider.File\MDD4All.SpecIF.DataProvider.File.csproj" />
   </ItemGroup>
 
