--- a/src/MDD4All.SpecIF.Generators.Vocabulary/MDD4All.SpecIF.Generators.Vocabulary-dev.csproj
+++ b/src/MDD4All.SpecIF.Generators.Vocabulary/MDD4All.SpecIF.Generators.Vocabulary-dev.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <StartupObject>MDD4All.SpecIF.Generators.Vocabulary.Program</StartupObject>
         <AssemblyName>MDD4All.SpecIF.Generators.Vocabulary</AssemblyName>
         <RootNamespace>MDD4All.SpecIF.Generators.Vocabulary</RootNamespace>
